fix(trazzo): dashboard tenant y payment MP
